# fakegen

./: README.md  pyproject.toml  setup.py
FakeGen.egg-info/: PKG-INFO  SOURCES.txt
fakegen_mnshah0101.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fakegenai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_myfunctions.py
